moved images links to their own line

--- a/_notebooks/2020-05-21-BQ-TS.ipynb
+++ b/_notebooks/2020-05-21-BQ-TS.ipynb
@@ -41,7 +41,8 @@
     "- On the left in the Navigation Pane, find your project and click on it.\n",
     "\n",
     "![bq-proj](images/bq-projects.png)\n",
-    "- In the bottom pane on the right-hand side, click ![create_dataset](images/create_ds.png)\n",
+    "- In the bottom pane on the right-hand side, click \n",
+    "![create_dataset](images/create_ds.png)\n",
     "- Name your dataset, \"timeseries\". Leave all other defaults and select \"Create dataset\" at the bottom of the screen.\n",
     "![name-dataset](images/name-dataset.png)\n",
     " - >Note: Note that Data location is important if you want to interact with other datasets and or projects. BigQuery requires that they be in the same location. This is outside the scope of this post, but may be important to note in future projcets.\n",
@@ -50,8 +51,10 @@
     "![show-dataset](images/show-dataset.png)\n",
     "\n",
     "### Step 3. Upload the AirPassengers csv to a BigQuery table.\n",
-    "- First, click on the dataset timeseries that you created in the above step and select ![create-table](images/create-table.png)\n",
-    "- Select Upload from the \"Create table from:\" dropdown, and browse to select the AirPassengers.csv (also located at link here). Make sure your project and dataset are correct. Name the table raw_airpassengers. Check Auto detect under Schema. Leave all other defualts and click Create table ![upload-table](images/upload-table.png)\n",
+    "- First, click on the dataset timeseries that you created in the above step and select \n",
+    "![create-table](images/create-table.png)\n",
+    "- Select Upload from the \"Create table from:\" dropdown, and browse to select the AirPassengers.csv (also located at link here). Make sure your project and dataset are correct. Name the table raw_airpassengers. Check Auto detect under Schema. Leave all other defualts and click Create table \n",
+    "![upload-table](images/upload-table.png)\n",
     "- Now we are ready to start coding.\n"
    ]
   },
@@ -60,15 +63,18 @@
    "metadata": {},
    "source": [
     "### Step 4. Clean the data\n",
-    "- Back in the left-hand pane, you should be able to click on your dataset and see the raw_airpassengers table below it. Click on the table and you will be able to see the table's Schema. ![raw-schema](images/raw-schema.png)\n",
-    "- If you click Preview, you can see the data and why the `Month` column has the `String` datatype. ![raw-data](images/raw-data.png)"
+    "- Back in the left-hand pane, you should be able to click on your dataset and see the raw_airpassengers table below it. Click on the table and you will be able to see the table's Schema. \n",
+    "![raw-schema](images/raw-schema.png)\n",
+    "- If you click Preview, you can see the data and why the `Month` column has the `String` datatype. \n",
+    "![raw-data](images/raw-data.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Trying to simply cast the Month column as a date will result in an error ![invalide-date](images/invalid-date.png)"
+    "- Trying to simply cast the Month column as a date will result in an error \n",
+    "![invalide-date](images/invalid-date.png)"
    ]
   },
   {
