--- a/_notebooks/2020-05-21-BQ-TS.ipynb
+++ b/_notebooks/2020-05-21-BQ-TS.ipynb
@@ -7,7 +7,8 @@
     "# Decomposing Multiplicative Time Series in GCP BigQuery (and Python too)\n",
     "> A tutorial on how to decompose a multiplicative time series in both SQL and Python\n",
     "\n",
-    "- toc:true- branch: master- badges: true- comments: true\n",
+    "- toc:true- branch: master\n",
+    "- badges: true- comments: true\n",
     "- author: Tad Peterson\n",
     "- categories: [SQL, GCP, BigQuery, Python, time series]"
    ]
