fixed another mapping issue

--- a/_notebooks/2020-05-21-BQ-TS.ipynb
+++ b/_notebooks/2020-05-21-BQ-TS.ipynb
@@ -8,7 +8,8 @@
     "> A tutorial on how to decompose a multiplicative time series in both SQL and Python\n",
     "\n",
     "- toc:true- branch: master\n",
-    "- badges: true- comments: true\n",
+    "- badges: true\n",
+    "- comments: true\n",
     "- author: Tad Peterson\n",
     "- categories: [SQL, GCP, BigQuery, Python, time series]"
    ]
